--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
     sdk: flutter
   simple_permissions: ^0.1.9
   speech_recognition: ^0.3.0+1
+  flutter_tts: ^0.6.0
   flare_flutter: ^1.6.0
+  speech_to_text: ^0.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
